// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box renders 1`] = `
<div
  className="sc-bdVaJa cahKXE"
/>
`;

exports[`Box renders with props 1`] = `
<div
  className="sc-bdVaJa juTkkz"
/>
`;

exports[`Flex renders 1`] = `
<div
  className="sc-htpNat eLQHN sc-bdVaJa iHZvIS"
/>
`;

exports[`Grid renders 1`] = `
<div
  className="sc-bwzfXH fIMJGd sc-bdVaJa iHZvIS"
/>
`;
